--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "editor.cursorBlinking": "expand",
-    "editor.cursorSmoothCaretAnimation": "off"
+    "editor.cursorSmoothCaretAnimation": "off",
+    "editor.mouseWheelZoom": true
 }
